--- a/package.json
+++ b/package.json
@@ -11,10 +11,13 @@
   "author": "Rytis M.",
   "license": "ISC",
   "dependencies": {
+    "@prisma/client": "^3.15.2",
     "@types/express": "^4.17.13",
     "@types/node": "^18.0.0",
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-graphql": "^0.12.0",
+    "graphql": "^16.5.0",
     "ts-node": "^10.8.1",
     "typescript": "^4.7.4"
   }
