--- a/package.json
+++ b/package.json
@@ -30,10 +30,13 @@
     "eslint": "^8.0.1",
     "eslint-config-airbnb-base": "^15.0.0",
     "eslint-config-standard": "^17.0.0",
+    "eslint-plugin-destructuring-newline": "^0.0.2",
     "eslint-plugin-import": "^2.25.2",
+    "eslint-plugin-modules-newline": "^0.0.6",
     "eslint-plugin-n": "^15.0.0",
     "eslint-plugin-node": "^11.1.0",
     "eslint-plugin-promise": "^6.0.0",
-    "eslint-plugin-standard": "^5.0.0"
+    "eslint-plugin-standard": "^5.0.0",
+    "eslint-plugin-unicorn": "^43.0.2"
   }
 }
